# cpctf25

./: README.md  pyproject.toml
binary/: lv2_d_guessing.md  lv2_i_secret-key.md
crypto/: lv4_i_rsa-trial-2025.py
forensics/: lv3_h_golden-protocol.md  lv3_i_i-love-md.md
lv1/: f.md
lv1/b/: solve.md
lv1/e/: solve.md
lv1/g/: solve.md
lv1/h/: solve.md
lv2/: b.py  e.md  l.md
lv3/: a.py  b.py  c.md  d.py  g.md  j.md  k.md  l.py  m.md  p.py
lv4/: c.py
lv5/: g.md
misc/: lv2_h-painting-break.md  lv3_q_correctionless.md
osint/: lv4_m_yellow-train.md  lv5_a_chaos-town.md  lv5_g_sweets.md
ppc/: lv1_c_luke-or-bishop.py  lv2_f_like-cpctf.py  lv2_j_swap-members.py  lv3_e_decrement-or-mod-game.py  lv3_n-the-farthest-point.py  lv3_o_toll-optimization.py
pwn/: lv2_a_2025.md  lv3_f_flag-guardian.py
shell/: lv2_c_count-cpctf.md  lv2_k_xfd.py
web/: lv2_g_name-omikuji.md  lv4_b_blend-script.md
